updated index and css
added more to bio are of index
added to  classes to css

--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
 
         <title>Jonathankyle Brooks' Portfolio</title>
 
-        <link rel="stylesheet" href="../../assets/style.css">
+        <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <style>
             
         </style>
     </head>
     <body>
-        <main>
-            <div class="welcome"></div>
-            <div class="container">
-                <h2>I'm Jonathankyle Brooks. Welcome to my portfolie.</h2>
-                <div class="caption">
-                <h5 style="color:aqua">A</h5>
-                <ul class="descriptor_list">
-                    <li class="descriptor_list_item">fast learner.</li>
-                    <li class="descriptor_list_item">self starter. </li>
-                    <li class="descriptor_list_item">curious mind.</li>
-                    <li class="descriptor_list_item">problem solver.</li>
-                    <li class="descriptor_list_item">collaborator</li>
+        <nav>
+            <img src="assets\images\profilePic.jpg" class="profile-pic img" alt="avatar">
+        </nav>
+            <main>
+            <section id="intro" class="welcome">
 
-                </ul>
-                </div>
+            <div class="container">
+                <h2>I'm <span class="myname"></span>Jonathankyle Brooks. </span></h2>
             </div>
+            <div class="caption">
+                <h5 class="caption.text">A</h5>
+                    <ul class="caption.list"><span></span>
+                    <li class="caption.item">fast learner.</li>
+                    <li class="caption.item">self starter. </li>
+                    <li class="caption.item">curious mind.</li>
+                    <li class="caption.item">problem solver.</li>
+                    <li class="caption.item">collaborator</li>
+                    </span>
+                    </ul>
+            </div>
+            </section>
+            
         </main>
     </body>
 
