scrolling text in intro
Adding scrolling text in CSS to caption under name

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <nav>
             <img src="assets\images\profilePic.jpg" class="profile-pic img" alt="avatar">
         </nav>
+        <nav class="menu">
+            <ul id="nav-hover" class="side-nav">
+                <li class="bold">
+                <a aria-label="Go to About section" href="#about" class="slide-effect"><i
+                class="media-person-small"></i><span>About</span></a>
+                </li>
+
+            </ul>
+        </nav>
             <main>
             <section id="intro" class="welcome">
 
@@ -25,16 +34,17 @@
                 <h2>I'm <span class="myname"></span>Jonathankyle Brooks. </span></h2>
             </div>
             <div class="caption">
-                <h5 class="caption.text">A</h5>
-                    <ul class="caption.list"><span></span>
-                    <li class="caption.item">fast learner.</li>
-                    <li class="caption.item">self starter. </li>
-                    <li class="caption.item">curious mind.</li>
-                    <li class="caption.item">problem solver.</li>
-                    <li class="caption.item">collaborator</li>
+                <h5>{A___________________}</h5>
+            </div>
+                    <ul class="list"><span></span>
+                    <li class="list.item">fast learner.</li>
+                    <li class="list.item">self starter. </li>
+                    <li class="list.item">curious mind.</li>
+                    <li class="list.item">problem solver.</li>
+                    <li class="list.item">collaborator</li>
                     </span>
                     </ul>
-            </div>
+
             </section>
             
         </main>
