Added sections to index.html
Added Projects, Skills, and Education to the page and added the CSS for each section.

--- a/index.html
+++ b/index.html
@@ -16,22 +16,39 @@
     </head>
     <body>
         <nav>
-            <img src="assets\images\profilePic.jpg" class="profile-pic img" alt="avatar">
-        </nav>
-        <nav class="menu">
             <ul id="nav-hover" class="side-nav">
-                <li class="bold">
-                <a aria-label="Go to About section" href="#about" class="slide-effect"><i
-                class="media-person-small"></i><span>About</span></a>
-                </li>
+            <li class="profile">
+                <a id="profile-container" aria-label="Navigate to the beginning of the page" href="#intro">
+                    <img src="assets\images\profilePic.jpg" class="profile-pic img" alt="avatar">
+                </a>
+            </li>
 
-            </ul>
+            <li class="bold">
+                <a aria-label="Go to About section" href="#about" class="slide-effect"><i
+                class="media-person-small"></i><span>About</span>
+                </a>
+                </li>
+            <li class="bold">
+                <a aria-label="Go to projects" href="#projects">
+                <i class="hammer"></i>
+                <span>Projects</span></a>
+            </li>
+            <li class="bold">
+                <a aria-label="Go to skills" href="#skills">
+                <i class="assessment"></i>
+                <span>Skills</span></a>
+            </li>
+            <li class="bold">
+                <a aria-label="Go to education" href="#education">
+                <i class="grad"></i>
+                <span>Education</span></a>
+            </li>
+
         </nav>
             <main>
-            <section id="intro" class="welcome">
-
+            <section id="intro" class="section">
+            <h3 class="greeting">I'm <span class="myname">Jonathankyle Brooks.</span></h3>
             <div class="container">
-                <h2>I'm <span class="myname"></span>Jonathankyle Brooks. </span></h2>
             </div>
             <div class="caption">
                 <h5>{A___________________}</h5>
@@ -44,7 +61,87 @@
                     <li class="list.item">collaborator</li>
                     </span>
                     </ul>
+                    <div class="social">
+                        <a href="https://www.linkedin.com/in/jonathankyle-brooks/" target="_blank">
+                        <button class="icon-linkedin"
+                        <i class="fa-linkedin">in</i>
+                        </button></a>
+                    </div>
+                    <div class="social">
+                        <a href="https://github.com/CaptainPoldark" target="_blank">
+                        <button class="icon-github"
+                        <i class="fa-github"></i>
+                        </button></a>
+                    </div>
 
+            </section>
+
+            <section id="about" class="section">
+                <h3 class="title">About</h3>
+                <div class="profile-containers">
+                    <p>
+                        I am a Cybersecurity student at Kennesaw State University. I'm currently working as an Information Security 
+                        and Compliance Analyst as well as provide Tier 2 level IT Support at Inspired Technologies in Tallhassee, Fl. 
+                        I donate time outside of work at Greenwood in Valdosta, Ga acting as the volunteer IT Administrator, lead 
+                        sound engineer, and live broadcast coordinator. I don't have enough bookshelves for all the books I've read 
+                        and would like to read. 
+                    </p>
+                    <p>
+                        I'm a detail oriented web developer with experience in Javascript, CSS, AWS, Azure, Powershell, and C#.
+                        Looking for an opportunity to work in a challenging position to combine my skills in Web Development, that 
+                        provides opportinity for professional development, interesting experiences, and new relationship building.
+                    </p>
+                </div>
+            </section>
+            <section id="projects" class="section">
+                <h3 class="title">Projects</h3>
+                <div class="profile-containers">
+                    <p>
+                        “If someone is able to show me that what I think or do is not right, I will happily change, for 
+                        I seek the truth, by which no one was ever truly harmed. It is the person who continues in his 
+                        self-deception and ignorance who is harmed.”
+                    </p>
+                    <p>
+                        “Whenever you are about to find fault with someone, ask yourself the following question: 
+                        What fault of mine most nearly resembles the one I am about to criticize?”
+                    </p>
+                </div>
+            </section>
+            <section id="skills" class="section">
+                <h3 class="title">Skills</h3>
+                <div class="profile-containers">
+                    <p>
+                        “When you wake up in the morning, tell yourself: the people I deal with today will be meddling, 
+                        ungrateful, arrogant, dishonest, jealous and surly. They are like this because they can't tell 
+                        good from evil. But I have seen the beauty of good, and the ugliness of evil, and have recognized 
+                        that the wrongdoer has a nature related to my own - not of the same blood and birth, but the same 
+                        mind, and possessing a share of the divine. And so none of them can hurt me. No one can implicate 
+                        me in ugliness. Nor can I feel angry at my relative, or hate him. We were born to work together 
+                        like feet, hands and eyes, like the two rows of teeth, upper and lower. To obstruct each other is 
+                        unnatural. To feel anger at someone, to turn your back on him: these are unnatural.”
+                    </p>
+                    <p>
+                        “Reject your sense of injury and the injury itself disappears.”
+                    </p>
+                </div>
+            </section>
+            <section id="education" class="section">
+                <h3 class="title">Education</h3>
+                <div class="profile-containers">
+                    <p>
+                        “When you wake up in the morning, tell yourself: the people I deal with today will be meddling, 
+                        ungrateful, arrogant, dishonest, jealous and surly. They are like this because they can't tell 
+                        good from evil. But I have seen the beauty of good, and the ugliness of evil, and have recognized 
+                        that the wrongdoer has a nature related to my own - not of the same blood and birth, but the same 
+                        mind, and possessing a share of the divine. And so none of them can hurt me. No one can implicate 
+                        me in ugliness. Nor can I feel angry at my relative, or hate him. We were born to work together 
+                        like feet, hands and eyes, like the two rows of teeth, upper and lower. To obstruct each other is 
+                        unnatural. To feel anger at someone, to turn your back on him: these are unnatural.”
+                    </p>
+                    <p>
+                        “Reject your sense of injury and the injury itself disappears.”
+                    </p>
+                </div>
             </section>
             
         </main>
