Navbar, contact info updated
Made navbar sticky, adjusted the color theme, updated the urls in contact information to be hyperlinks.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 <i class="grad"></i>
                 <span>Education</span></a>
             </li>
+            <li class="bold">
+                <a aria-label="Go to contact" href="#contact">
+                <i class="phone"></i>
+                <span>Contact me</span></a>
+            </li>
 
         </nav>
             <main>
@@ -71,6 +76,13 @@
                         <button class="icon-github"
                         <i class="fa-github"></i>
                         </button></a>
+                    </div>
+                    <div class="video-wrapper">
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j6-401Cy4vY" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                     </div>
 
             </section>
@@ -139,6 +151,23 @@
                     </p>
                     <p>
                         “Reject your sense of injury and the injury itself disappears.”
+                    </p>
+                </div>
+            </section>
+            <section id="contact" class="section">
+                <h3 class="title">Contact me</h3>
+                <div class="profile-containers">
+                    <p>
+                        Email: jonathankylebrooks@gmail.com
+                    </p>
+                    <p>
+                        Phone: (229) 329-6312
+                    </p>
+                    <p>
+                        <a href="https://github.com/CaptainPoldark">Github.com/CaptainPoldark</a>
+                    </p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/jonathankyle-brooks/">LinkedIn.com/Jonathankyle-brooks</a>
                     </p>
                 </div>
             </section>
