added and removed Javascript and styling
Added typing animation in javascript for intro caption, then removed it. modified styling of name in intro.

--- a/index.html
+++ b/index.html
@@ -52,20 +52,19 @@
         </nav>
             <main>
             <section id="intro" class="section">
-            <h3 class="greeting">I'm <span class="myname">Jonathankyle Brooks.</span></h3>
+            <h3 class="greeting">Hey, I'm <span class="myname">Jonathankyle Brooks.</span></h3>
             <div class="container">
             </div>
             <div class="caption">
-                <h5>{A___________________}</h5>
+                <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+                <h5>A</h5>
+                <span
+                class="txt-rotate"
+                data-period="2000"
+                data-rotate='[ "fast learner.", "self starter.", "curios mind.", "problem solver.", "collaborator" ]'></span>
+                <div class="typedOutput"></div>
             </div>
-                    <ul class="list"><span></span>
-                    <li class="list.item">fast learner.</li>
-                    <li class="list.item">self starter. </li>
-                    <li class="list.item">curious mind.</li>
-                    <li class="list.item">problem solver.</li>
-                    <li class="list.item">collaborator</li>
-                    </span>
-                    </ul>
+
                     <div class="social">
                         <a href="https://www.linkedin.com/in/jonathankyle-brooks/" target="_blank">
                         <button class="icon-linkedin"
@@ -116,6 +115,8 @@
                         “Whenever you are about to find fault with someone, ask yourself the following question: 
                         What fault of mine most nearly resembles the one I am about to criticize?”
                     </p>
+                   
+
                 </div>
             </section>
             <section id="skills" class="section">
