updated skills, pacman, projects
Added content to the Skills section
added a projects page and embeded the pacman script. Added pacman.js to the assest/js/ folder.
Added pacman images to assets/images/pacman/ folder

--- a/projects.html
+++ b/projects.html
@@ -52,71 +52,28 @@
 
         </nav>
             <main>
-            <section id="intro" class="section">
-            <h3 class="greeting">Hey, I'm <span class="myname">Jonathankyle Brooks.</span></h3>
-            <div class="container">
-            </div>
-            <div class="caption">
-                <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
-                <h5>A</h5>
-                <span
-                class="txt-rotate"
-                data-period="2000"
-                data-rotate='[ "fast learner.", "self starter.", "curios mind.", "problem solver.", "collaborator" ]'></span>
-                <div class="typedOutput"></div>
-            </div>
 
-                    <div class="social">
-                        <a href="https://www.linkedin.com/in/jonathankyle-brooks/" target="_blank">
-                        <button class="icon-linkedin"
-                        <i class="fa-linkedin">in</i>
-                        </button></a>
 
-                        <a href="https://github.com/CaptainPoldark" target="_blank">
-                        <button class="icon-github"
-                        <i class="fa-github"></i>
-                        </button></a>
-                    </div>
-                    <div class="video-wrapper">
-                    <div class="video-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/A4k_O5v0sug" 
-                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                    </iframe>
-                    </div>
-                    </div>
-
-            </section>
-
-            <section id="about" class="section">
-                <h3 class="title">About</h3>
+            <section id="current-projects" class="section">
+                <h3 class="title">Current Projects</h3>
                 <div class="profile-containers">
                     <p>
-                        I am a Cybersecurity student at Kennesaw State University and MIT Full Stack Web Devolopment student. I'm currently working as an Information Security 
-                        and Compliance Analyst as well as provide Tier 2 level IT Support at Inspired Technologies in Tallhassee, Fl. 
-                        I donate time outside of work at Greenwood in Valdosta, Ga acting as the volunteer IT Administrator, lead 
-                        sound engineer, and live broadcast coordinator. I don't have enough bookshelves for all the books I've read 
-                        and would like to read. 
+                        Below you will find a list of current projects I am working on. 
                     </p>
-                    <p>
-                        I'm a detail oriented web developer with experience in Javascript, CSS, AWS, Azure, Powershell, and C#.
-                        Looking for an opportunity to work in a challenging position to combine my skills in Web Development, that 
-                        provides opportinity for professional development, interesting experiences, and new relationship building.
-                    </p>
+
                 </div>
             </section>
-            <section id="projects" class="section">
-                <h3 class="title">Projects</h3>
+            <section id="pacman" class="section">
+                <h3 class="title">Pacman</h3>
                 <div class="profile-containers">
                     <p>
                         “If someone is able to show me that what I think or do is not right, I will happily change, for 
                         I seek the truth, by which no one was ever truly harmed. It is the person who continues in his 
                         self-deception and ignorance who is harmed.”
                     </p>
-                    <p>
-                        “Whenever you are about to find fault with someone, ask yourself the following question: 
-                        What fault of mine most nearly resembles the one I am about to criticize?”
-                    </p>
+                    <div class="pacman-container">
+                        <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
+                    </div>
                     <a href="projects.html" target="_blank">
                         <button class="icon-projects"
                         <i class="bi bi-code-slash">View more projects</i>
@@ -202,5 +159,6 @@
             
         </main>
     </body>
+    <script src="assets\js\pacman.js"></script>
 
 </html>
