--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" 
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+        <link rel="stylesheet" href="./assets/eyes.css"
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -25,27 +26,27 @@
             </li>
 
             <li class="bold">
-                <a aria-label="Go to About section" href="#about" class="slide-effect"><i
+                <a aria-label="Go to About section" href="index.html#about" class="slide-effect"><i
                 class="media-person-small"></i><span>About</span>
                 </a>
                 </li>
             <li class="bold">
-                <a aria-label="Go to projects" href="#projects">
+                <a aria-label="Go to projects" href="index.html#projects">
                 <i class="hammer"></i>
                 <span>Projects</span></a>
             </li>
             <li class="bold">
-                <a aria-label="Go to skills" href="#skills">
+                <a aria-label="Go to skills" href="index.html#skills">
                 <i class="assessment"></i>
                 <span>Skills</span></a>
             </li>
             <li class="bold">
-                <a aria-label="Go to education" href="#education">
+                <a aria-label="Go to education" href="index.html#education">
                 <i class="grad"></i>
                 <span>Education</span></a>
             </li>
             <li class="bold">
-                <a aria-label="Go to contact" href="#contact">
+                <a aria-label="Go to contact" href="index.html#contact">
                 <i class="phone"></i>
                 <span>Contact me</span></a>
             </li>
@@ -74,70 +75,30 @@
                     <div class="pacman-container">
                         <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
                     </div>
-                    <a href="projects.html" target="_blank">
-                        <button class="icon-projects"
-                        <i class="bi bi-code-slash">View more projects</i>
-                        </button></a>
                 </div>
             </section>
-            <section id="skills" class="section">
-                <h3 class="title">Skills</h3>
+            <section id="eyes" class="section">
+                <h3 class="title">Eyes</h3>
                 <div class="profile-containers">
-                    <div class="card">
-                        <div class="card-content">
-                          <h4 class="brown-text light">Languages and Databases</h4>
-                          <div class="row text-center">
-                            <div class="col s4 m2">
-                              <img alt="" src="assets\images\javascript-logopng.png" class="responsive-img" />JavaScript
+                    <p>
+                        This is a simple mouse movement tracking demonstration with eyes that follow the user's pointer.
+                    </p>
+                        <div class="eyes">
+                            <div class="eye">
+                              <div class="ball"></div>
                             </div>
-                            <div class="col s4 m2">
-                              <img alt="" src="assets\images\html5-logo.png" class="responsive-img" >HTML5
-                            </div>
-                            <div class="col s4 m2">
-                              <img alt="" src="assets\images\css3-logo.png" class="responsive-img" >CSS3
-                            </div>
-                            <div class="col s4 m2">
-                              <img alt="" src="assets\images\mongodb-logo.png" class="responsive-img" />MongoDB
-                            </div>
-                            <div class="col s4 m2">
-                              <img alt="" src="assets\images\shell-logo.png" class="responsive-img" />Shell Scripting
+                            <div class="eye">
+                              <div class="ball"></div>
                             </div>
                           </div>
-                        </div>
                       </div>
-                </div>
+
             </section>
-            <section id="education" class="section">
-                <h3 class="title">Education</h3>
-                <div class="container">
-                  <div class="row">
-                    <!-- Education -->
-                    <div class="col s12 m6">
-                      <div class="card">
-                        <div class="card-content">
-                          <p>
-                            <span class="card-title"><a href="https://www.kennesaw.edu/" target="_blank" class="teal-text hoverline">Kennesaw State University</a></span>
-                          </p>
-                          <p class="card-text">Kennesaw, Ga, USA</p>
-                          <p>
-                            <b>Degree: </b>Bachelor of Science in Cybersecurity  
-                            <br>
-                          </p>
-          
-                          <ul>
-                            <p>
-                              <b>Relevant Coursework:</b>
-                            <ul>
-                              <li>C#</li>
-                              <li>Network and Application Security</li>                   
-                            </ul>
-                            </p>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            <section id="bustracking" class="section">
+                <h3 class="title">Bus Tracking</h3>
+                <p>
+                    Bus tracking app will be added here soon.
+                </p>
               </section>
             <section id="contact" class="section">
                 <h3 class="title">Contact me</h3>
@@ -160,5 +121,6 @@
         </main>
     </body>
     <script src="assets\js\pacman.js"></script>
+    <script src="assets\js\eyes.js"></script>
 
 </html>
