Updated project descriptions
Updated the description for the PacMan project

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         <nav>
             <ul id="nav-hover" class="side-nav">
             <li class="profile">
-                <a id="profile-container" aria-label="Navigate to the beginning of the page" href="#intro">
+                <a id="profile-container" aria-label="Navigate to the beginning of the page" href="index.html#intro">
                     <img src="assets\images\profilePic.jpg" class="profile-pic img" alt="avatar">
                 </a>
             </li>
@@ -68,9 +68,10 @@
                 <h3 class="title">Pacman</h3>
                 <div class="profile-containers">
                     <p>
-                        “If someone is able to show me that what I think or do is not right, I will happily change, for 
-                        I seek the truth, by which no one was ever truly harmed. It is the person who continues in his 
-                        self-deception and ignorance who is harmed.”
+                        This is a simple animation using JavaScript. Pacman stays contained within a predifined boundary.
+                        There are four images. One each for left and right, and a corresponding open/ close mouth image.
+                        These images are grouped into an array, and depending on the location and direction of PacMan, 
+                        the proper image will be shown.
                     </p>
                     <div class="pacman-container">
                         <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
@@ -96,9 +97,11 @@
             </section>
             <section id="bustracking" class="section">
                 <h3 class="title">Bus Tracking</h3>
+                <div class="profile-containers">
                 <p>
                     Bus tracking app will be added here soon.
                 </p>
+                </div>
               </section>
             <section id="contact" class="section">
                 <h3 class="title">Contact me</h3>
