--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,9 @@
                         <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
                     </div>
                 </div>
+                <div class="readme">
+                    <a href="https://github.com/CaptainPoldark/pacman#readme">Readme</a>
+                </div>
             </section>
             <section id="eyes" class="section">
                 <h3 class="title">Eyes</h3>
@@ -93,7 +96,9 @@
                             </div>
                           </div>
                       </div>
-
+                      <div class="readme">
+                          <a href="">Readme</a>
+                          </div>
             </section>
             <section id="bustracking" class="section">
                 <h3 class="title">Bus Tracking</h3>
