corrected pacman initial image path
relative path was  set for the initial pacman image.

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                         the proper image will be shown.
                     </p>
                     <div class="pacman-container">
-                        <img id="PacMan" src="PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
+                        <img id="PacMan" src="assets/images/pacman/PacMan1.png" width='200' onclick="Run()" style="position:absolute"> </img>
                     </div>
                 </div>
                 <div class="readme">
