fixed Projects and Education sections
Corrected styling of projects button link to stay under paragraph on different screen sizes, and made the education card fit in the education section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" 
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
         <link rel="stylesheet" type="text/css" href="./assets/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -118,7 +119,7 @@
                         What fault of mine most nearly resembles the one I am about to criticize?”
                     </p>
                     <a href="projects.html" target="_blank">
-                        <button class="icon-projects"
+                        <button class="bi bi-code-slash"
                         <i class="bi bi-code-slash">View more projects</i>
                         </button></a>
                 </div>
@@ -150,14 +151,14 @@
                       </div>
                 </div>
             </section>
-            <section id="education" class="section">
+            <section id="education" class="section scrollspy">
                 <h3 class="title">Education</h3>
                 <div class="container">
                   <div class="row">
                     <!-- Education -->
                     <div class="col s12 m6">
-                      <div class="card">
-                        <div class="card-content">
+                      <div class="card ">
+                        <div class="card-content" >
                           <p>
                             <span class="card-title"><a href="https://www.kennesaw.edu/" target="_blank" class="teal-text hoverline">Kennesaw State University</a></span>
                           </p>
