updated about me and languages
added content to about me, and languages. Added CSS styling

--- a/index.html
+++ b/index.html
@@ -39,6 +39,47 @@
                 Looking for an opportunity to work in a challenging position to combine my skills in Web Development, that 
                 provides opportunity for professional development, interesting experiences, and new meeting new people.</p>
             <div class="seperator"></div>
+
+            <div class="about-me-container">
+                <div class="left-col">
+                    <img src="assets\images\aboutPic.jpg" class="about-image">
+                </div>
+                <div class="right-col">
+                    <p class="about-paragraph">I am a Cybersecurity student at Kennesaw State University and MIT Full Stack Web Devolopment student. I'm currently working as an Information Security 
+                        and Compliance Analyst as well as provide Tier 2 level IT Support at Inspired Technologies in Tallhassee, Fl. 
+                        I donate time outside of work at Greenwood in Valdosta, Ga acting as the volunteer IT Administrator, lead 
+                        sound engineer, and live broadcast coordinator. I don't have enough bookshelves for all the books I've read 
+                        and would like to read. </p>
+                        <a href="#" class="btn"></a>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills" id="skills-section">
+            <h2 class="heading">languages and frameworks</h2>
+            <div class="seperator"></div>
+            <div class="skills-container">
+                <div class="skill-card" style="--bg: #f06529">
+                <p class="skill">JavaScript</p>
+
+                </div>
+                <div class="skill-card" style="--bg: #379ad6">
+                <p class="skill">HTML 5</p>
+
+                </div>
+                <div class="skill-card" style="--bg: #cc6699">
+                <p class="skill">CSS 3</p>
+
+                </div>
+                <div class="skill-card" style="--bg: #326690">
+                <p class="skill">MongoDB</p>
+
+                </div>
+                <div class="skill-card" style="--bg: #5ed9fb">
+                <p class="skill">Shell Scripting</p>
+
+                </div>
+            </div>
         </section>
     </body>
 </html>
