--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
                         sound engineer, and live broadcast coordinator. I don't have enough bookshelves for all the books I've read 
                         and would like to read. </p>
                         <a href="#" class="btn"></a>
+                        <div class="video-wrapper">
+                            <iframe width="560" height="349" src="https://www.youtube.com/embed/A4k_O5v0sug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                 </div>
+                
             </div>
         </section>
 
