update projects and favicon
add bus tracker to projects, and included favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="eng">
     <head>
         <title>Jonathankyle Brooks' Portfolio</title>
+        <link rel="shortcut icon" type="image/jpg" href="assets\images\icon.jpg"
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" type="text/css" href="./assets/style.css" />
@@ -65,7 +66,7 @@
                         I donate time outside of work at Greenwood in Valdosta, Ga acting as the volunteer IT Administrator, lead 
                         sound engineer, and live broadcast coordinator. I don't have enough bookshelves for all the books I've read 
                         and would like to read. </p>
-                        <a href="#" class="btn"></a>
+                        <!-- <a href="#" class="btn"></a> -->
                         <div class="video-wrapper">
                             <iframe width="560" height="349" src="https://www.youtube.com/embed/A4k_O5v0sug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                             clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
