--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,9 @@
                 <p class="project-description">
                     Bus tracking app will be added here soon.
                 </p>
+                <div class="bus-tracker-container">
+                    <div id="map" style="width:100%; height:250px"></div>
+                </div>
 
 
             </div>
@@ -89,4 +92,6 @@
     </body>
     <script src="assets\js\pacman.js"></script>
     <script src="assets\js\eyes.js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
+    <script src="assets\js\busTracker.js"></script>
 </html>
