--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,6 @@
     </body>
     <script src="assets\js\pacman.js"></script>
     <script src="assets\js\eyes.js"></script>
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
     <script src="assets\js\busTracker.js"></script>
 </html>
