--- a/projects.html
+++ b/projects.html
@@ -97,5 +97,5 @@
     <script src="assets\js\pacman.js"></script>
     <script src="assets\js\eyes.js"></script>
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
-    <script src="assets\js\busTracker.js"></script>
+    <script src="https://github.com/CaptainPoldark/mbta-tracker/blob/main/mbtaBusTracker.js"></script>
 </html>
