--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
                     Bus tracking app will be added here soon.
                 </p>
                 <div class="bus-tracker-container">
-                    <div id="map" style="width:100%; height:250px"></div>
+                    <a href="https://github.com/CaptainPoldark/pacman" class="projects-btn"><span class="bi bi-book"> Open in Github!</span></a>
                 </div>
 
 
@@ -97,5 +97,6 @@
     <script src="assets\js\pacman.js"></script>
     <script src="assets\js\eyes.js"></script>
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyARxs_0QWBQzZ-7tnFIkcz6Tzh5Fr1I0xg"></script>
-    <script src="https://github.com/CaptainPoldark/mbta-tracker/blob/main/mbtaBusTracker.js"></script>
+    <script src="mbtaBusTracker.js></script>
+    
 </html>
