--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             <div class="pacman-container">
 
                 <p class="project-description">
-                    Bus tracking app will be added here soon.
+                    App using the MapboxGL and MBTA APIs to bring you a live view of the bus system in The City of Boston.
                 </p>
                 <div class="bus-tracker-container">
                     <a href="https://captainpoldark.github.io/mbta-tracker/" class="btn">Check out my bus tracker!</a>
