--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
             <div class="pacman-container">
 
                 <p class="project-description">
-                    App using the MapboxGL and MBTA APIs to bring you a live view of the bus system in The City of Boston.
+                    App using the MapboxGL and MBTA APIs to bring you a live view of the bus system in The City of Boston. The data is polled every 5 seconds and updated automatically on the map. 
                 </p>
                 <div class="bus-tracker-container">
                     <a href="https://captainpoldark.github.io/mbta-tracker/" class="btn">Check out my bus tracker!</a>
