update ReadMe and projects page
updated portolio readme file, and added links in the project page to the pacman files on GitHub

--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,8 @@
 
                 
             </div>
-            <a href="https://github.com/CaptainPoldark/jonathankyle/tree/main/assets" class="projects-btn"><span class="bi bi-github"> Open in Github!</span></a>
-            <a href="https://github.com/CaptainPoldark/jonathankyle/tree/main/assets" class="projects-btn"><span class="bi bi-book-fill"> View ReadMe!</span></a>
+            <a href="https://github.com/CaptainPoldark/pacman" class="projects-btn"><span class="bi bi-github"> Open in Github!</span></a>
+            <a href="https://github.com/CaptainPoldark/pacman/blob/main/README.md" class="projects-btn"><span class="bi bi-book-fill"> View ReadMe!</span></a>
 
         </section>
 
