updated README and projects page
updated README
added link to eyes README on projects page

--- a/projects.html
+++ b/projects.html
@@ -74,8 +74,8 @@
                   </div>
               </div>
               
-              <a href="https://github.com/CaptainPoldark/jonathankyle/tree/main/assets" class="projects-btn"><span class="bi bi-github"> Open in Github!</span></a>
-              <a href="https://github.com/CaptainPoldark/jonathankyle/tree/main/assets" class="projects-btn"><span class="bi bi-book-fill"> View ReadMe!</span></a>
+              <a href="https://github.com/CaptainPoldark/jonathankyle/blob/main/assets/js/eyes.js" class="projects-btn"><span class="bi bi-github"> Open in Github!</span></a>
+              <a href="https://github.com/CaptainPoldark/jonathankyle/tree/main/assets/README#readme" class="projects-btn"><span class="bi bi-book-fill"> View ReadMe!</span></a>
              
         </section>
 
