moved projects page
moved projects page to projects/projects.html

updated link in index.html

disabled button for Hanoi Tower

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p class="sub-heading">Here is a sample of some of my current projects</p>
             <div class="seperator"></div>
             <div class="projects-container">
-            <a href="projects.html" class="btn">Check out my projects!</a>
+            <a href="projects\projects.html" class="btn">Check out my projects!</a>
             </div>
         </section>
 
