--- a/projects/projects.html
+++ b/projects/projects.html
@@ -105,7 +105,7 @@
                     We have three posts, and a user defined number of disks. The goal is to move the disks from the first to the thrid post without stacking a larger disk on top of a smaller disk. The preview here shows 5 disks, but my full version allows you to define the number of disks. 
                 </p>
                 <div class="bus-tracker-container">
-                    <a href="https://captainpoldark.github.io/mbta-tracker/" class="btn">Check out my Hanoi Tower!</a>
+                    <a href="" class="btn">Will be made available soon!</a>
                 </div>
                 </div>
             <a href="https://github.com/CaptainPoldark/mbta-tracker" class="projects-btn"><span class="bi bi-github"> Open in Github!</span></a>
