--- a/projects/projects.html
+++ b/projects/projects.html
@@ -20,7 +20,7 @@
                 <span></span>
             </div>
             <ul class="links-container">
-                <li class="links-item"><a href="index.html" class="link active">home</a></li>
+                <li class="links-item"><a href="..\index.html" class="link active">home</a></li>
                 <li class="links-item"><a href="#pacman-section" class="link">pacman</a></li>
                 <li class="links-item"><a href="#eyes-section" class="link">eyes</a></li>
                 <li class="links-item"><a href="#bus-section" class="link">bus tracker</a></li>
