--- a/projects/projects.html
+++ b/projects/projects.html
@@ -20,10 +20,12 @@
                 <span></span>
             </div>
             <ul class="links-container">
-                <li class="links-item"><a href="..\index.html" class="link active">home</a></li>
+                <li class="links-item"><a href="..\index.html" class="link">home</a></li>
+                <li class="links-item"><a href="projects.html" class="link active">home</a></li>
                 <li class="links-item"><a href="#pacman-section" class="link">pacman</a></li>
                 <li class="links-item"><a href="#eyes-section" class="link">eyes</a></li>
-                <li class="links-item"><a href="#bus-section" class="link">bus tracker</a></li>
+                <li class="links-item"><a href="https://github.com/CaptainPoldark/mbta-tracker" class="link">bus tracker</a></li>
+                <li class="links-item"><a href="..\index.html#contact-section" class="link">Contact Me</a></li>
             </ul>
         </nav>
         <!--home section-->
