corrected nav links index.html, projects.html
corrected links in index.html and projects.html to reduce clicks to a specific section/ project.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="links-container">
                 <li class="links-item"><a href="#" class="link active">home</a></li>
-                <li class="links-item"><a href="#project-section" class="link">projects</a></li>
+                <li class="links-item"><a href="projects/projects.html" class="link">projects</a></li>
                 <li class="links-item"><a href="#about-section" class="link">about</a></li>
                 <li class="links-item"><a href="#contact-section" class="link">contact</a></li>
             </ul>
