--- a/projects/projects.html
+++ b/projects/projects.html
@@ -24,7 +24,7 @@
                 <li class="links-item"><a href="projects.html" class="link active">home</a></li>
                 <li class="links-item"><a href="#pacman-section" class="link">pacman</a></li>
                 <li class="links-item"><a href="#eyes-section" class="link">eyes</a></li>
-                <li class="links-item"><a href="https://github.com/CaptainPoldark/mbta-tracker" class="link">bus tracker</a></li>
+                <li class="links-item"><a href="https://captainpoldark.github.io/mbta-tracker/" class="link">bus tracker</a></li>
                 <li class="links-item"><a href="..\index.html#contact-section" class="link">Contact Me</a></li>
             </ul>
         </nav>
