--- a/projects/projects.html
+++ b/projects/projects.html
@@ -21,7 +21,7 @@
             </div>
             <ul class="links-container">
                 <li class="links-item"><a href="..\index.html" class="link">home</a></li>
-                <li class="links-item"><a href="projects.html" class="link active">home</a></li>
+                <li class="links-item"><a href="projects.html" class="link active">projects</a></li>
                 <li class="links-item"><a href="#pacman-section" class="link">pacman</a></li>
                 <li class="links-item"><a href="#eyes-section" class="link">eyes</a></li>
                 <li class="links-item"><a href="https://captainpoldark.github.io/mbta-tracker/" class="link">bus tracker</a></li>
