--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="education-card">
                 <p class="school-name">Kennesaw State University</p>
                 <div class="school-description"></div>
-                  <p>Degree: B.S. Cybersecurity</p>
+                  <p><b>Degree:</b> B.S. Cybersecurity</p>
                   <p>In progress</p>
                   <br>
                 </p>
@@ -134,7 +134,7 @@
                 <div class="education-card">
                 <p class="school-name">MIT/ Emeritus</p>
                 <div class="school-description">
-                    <p>Program: Full-Stack Web Development Bootcamp</p>
+                    <p><b>Program: </b>Full-Stack Web Development Bootcamp</p>
                     <p>In progress</p>
                     <br>
                   </p>
