fix coursework description alignment
An extra UL tag was removed before the actual unordered list

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 
                 <div class="education-card">
                 <p class="school-name">Kennesaw State University</p>
-                <div class="school-description"></div>
+                <div class="school-description">
                   <p><b>Degree:</b> B.S. Cybersecurity</p>
                   <p>In progress</p>
                   <br>
                 </p>
-                
-                <ul>
+            </div>
+
                   <p>
                     <b>Relevant Coursework:</b>
                   <ul class="school-description">
@@ -138,8 +138,8 @@
                     <p>In progress</p>
                     <br>
                   </p>
-                  
-                  <ul>
+                  </div>
+
                     <p>
                       <b>Relevant Coursework:</b>
                     <ul class="school-description">
@@ -148,7 +148,7 @@
                       <li>Node(.js)</li>
                       <li>CSS</li>
                       </ul>
-                    </div>
+
 
                 </div>
             </div>
